+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 Release Candidate 1?
=============================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------

Extension Modules
-----------------

- Issue #8674: Fixed a number of incorrect or undefined-behaviour-inducing
  overflow checks in the audioop module.

Tests
-----

- On darwin, test_site assumed that a framework build was being used, leading
  to a failure where four directories were expected for site-packages instead
  of two in a non-framework build.


What's New in Python 2.7 beta 2?
================================

*Release date: 2010-05-08*

Core and Builtins
-----------------

- Run Clang 2.7's static analyzer for Objects/ and Python/ .

- Issue #1533: fix inconsistency in range function argument
  processing: any non-float non-integer argument is now converted to
  an integer (if possible) using its __int__ method.  Previously, only
  small arguments were treated this way; larger arguments (those whose
  __int__ was outside the range of a C long) would produce a TypeError.

- Issue #8202: sys.argv[0] is now set to '-m' instead of '-c' when
  searching for the module file to be executed with the -m command
  line option

- Issue #7319: When -Q is used, do not silence DeprecationWarning.

- Issue #7332: Remove the 16KB stack-based buffer in
  PyMarshal_ReadLastObjectFromFile, which doesn't bring any noticeable
  benefit compared to the dynamic memory allocation fallback.  Patch by
  Charles-François Natali.

- Issue #8417: Raise an OverflowError when an integer larger than sys.maxsize is
  passed to bytearray.

- Issue #7072: isspace(0xa0) is true on Mac OS X

- Issue #8404: Fixed set operations on dictionary views.

- Issue #8084: PEP 370 now conforms to system conventions for framework
  builds on MacOS X. That is, "python setup.py install --user" will install